<resources>
    <string name="app_name">androidStudy</string>
    <string name="main_quit_button">退出</string>
    <string name="main_menu_item_add">添加</string>
    <string name="main_menu_item_remove">删除</string>
    <string name="profile_button">简介</string>
    <string name="main_menu_profile">我的</string>
    <string name="main_browse_button">Browse</string>
    <string name="main_intent_button">Intent用法</string>
    <string name="intent_activity_label">Intent用法样例</string>
    <string name="intent_tel_button">拨打电话</string>
    <string name="con_prev_button">上一步</string>
    <string name="password_label_text">密码信息</string>
    <string name="user_name_label_text">用户名</string>
    <string name="user_name_text">张三</string>
    <string name="describe_text">西安市-未央区-三桥市场</string>
    <string name="describe_label_text">详细信息</string>
    <string name="user_icon_describe">user_profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_component_example">组件样例</string>
    <string name="component_example_activity_label">组件样例</string>
    <string name="component_example_display">显示板</string>
    <string name="component_example_button_left">左</string>
    <string name="component_example_button_right">右</string>
    <string name="component_example_switch">开关</string>
    <string name="component_example_seek_bar_input">请输入整数</string>
    <string name="component_example_seek_bar_button">确定</string>
    <string name="component_example_radio_android">Android</string>
    <string name="component_example_radio_apple">Apple</string>
    <string name="component_example_checkbox_a">语文</string>
    <string name="component_example_checkbox_b">数学</string>
    <string name="component_example_checkbox_c">英语</string>
    <string name="button">按钮</string>
    <string name="live_data_text_view">live_data_text_view</string>
    <string name="live_data_button_up">up</string>
    <string name="live_data_button_down">down</string>
    <string name="main_live_data">ViewModel展示</string>
    <string name="main_tool_bar_button">ToolBar样例</string>
    <string name="mian_drawer_layout_button">DrawerLayout</string>
    <string name="drawer_layout">滑动菜单</string>
</resources>